--- a/crawler/Dockerfile
+++ b/crawler/Dockerfile
@@ -4,9 +4,11 @@
 #EXPOSE 8080
 #CMD ["java", "-jar", "crawler-0.0.1-SNAPSHOT.jar"]
 
-FROM maven:3.8.4 AS builder
+# First stage: build the application
+FROM maven:3.8.6-openjdk-21 AS builder
 WORKDIR /app
 COPY pom.xml .
+RUN mvn dependency:go-offline
 COPY src ./src
 RUN mvn clean install
 FROM openjdk:21-slim
@@ -14,4 +16,5 @@ WORKDIR /app
 COPY --from=builder /app/target/*.jar ./crawler-0.0.1-SNAPSHOT.jar
 EXPOSE 90
 CMD ["java", "-jar", "crawler-0.0.1-SNAPSHOT.jar"]
+
 
