--- a/crawler/Dockerfile
+++ b/crawler/Dockerfile
@@ -5,7 +5,7 @@
 #CMD ["java", "-jar", "crawler-0.0.1-SNAPSHOT.jar"]
 
 # First stage: build the application
-FROM maven:3.8.6-openjdk-21 AS builder
+FROM maven:3.8.6 AS builder
 WORKDIR /app
 COPY pom.xml .
 RUN mvn dependency:go-offline
