--- a/crawler/pom.xml
+++ b/crawler/pom.xml
@@ -100,6 +100,16 @@
       <artifactId>ognl</artifactId>
       <version>3.3.4</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml</artifactId>
+      <version>5.2.3</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.13.0</version>
+    </dependency>
   </dependencies>
   <repositories>
     <repository>
