feature/change-form-return-word-document - add spinner, neighbour locations and database, update template headers

--- a/crawler/src/main/resources/application.properties
+++ b/crawler/src/main/resources/application.properties
@@ -2,3 +2,20 @@ spring.application.name=crawler
 
 proxy.username=${PROXY_USERNAME}
 proxy.password=${PROXY_PASSWORD}
+
+server-port=8080
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_properties
+spring.datasource.username=root
+spring.datasource.password=root
+
+# Hibernate settings (optional)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+spring.flyway.locations=classpath:db/migration
+spring.flyway.schemas=public
+spring.flyway.migration=update
+#flyway.baselineOnMigrate=true
