--- a/crawler/docker-compose-local.yaml
+++ b/crawler/docker-compose-local.yaml
@@ -1,14 +1,12 @@
-version: "4.0"
-
 services:
   db:
     image: postgres:14.13-alpine3.20
     container_name: postgres_db
     restart: on-failure
     environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: db_properties
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: root
     ports:
       - "5432:5432"
     volumes:
