--- a/crawler/src/main/resources/application.properties
+++ b/crawler/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.port=8080
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-#Work with DigitalOceanDatabase and locally (if ENV are not set)
+# Works for production and for local development (if ENV are not set - docker-compose-local.yml)
 spring.datasource.username=${DB_USERNAME:root}
 spring.datasource.password=${DB_PASSWORD:root}
 spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:${DB_PORT:5432}/${DB_TABLE_NAME:db_properties}
