add restart: always to docker-compose.yml file

--- a/crawler/docker-compose.yml
+++ b/crawler/docker-compose.yml
@@ -25,6 +25,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    restart: always
     ports:
       - "8081:8080"
     depends_on:
